// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateEventEmitterCpp can generate fixture ARRAY_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/ARRAY_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/BOOLEAN_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture COLOR_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/COLOR_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture COMMANDS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/COMMANDS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/COMMANDS_AND_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture DIMENSION_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/DIMENSION_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/DOUBLE_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/EventEmitters.h>


namespace facebook::react {

void EventsNestedObjectNativeComponentEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"change\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    {
  auto __codegen__1__location = jsi::Object(runtime);
  {
    auto __codegen__2__source = jsi::Object(runtime);
    __codegen__2__source.setProperty(runtime, \\"url\\", event.location.source.url);
    __codegen__1__location.setProperty(runtime, \\"source\\", __codegen__2__source);
  }
  __codegen__1__location.setProperty(runtime, \\"x\\", event.location.x);
  __codegen__1__location.setProperty(runtime, \\"y\\", event.location.y);
  payload.setProperty(runtime, \\"location\\", __codegen__1__location);
}
    return payload;
  });
}

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EVENT_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EVENT_PROPS/EventEmitters.h>
#include <jsi/JSIDynamic.h>

namespace facebook::react {

void EventsNativeComponentEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"change\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
payload.setProperty(runtime, \\"source\\", event.source);
payload.setProperty(runtime, \\"progress\\", event.progress);
payload.setProperty(runtime, \\"scale\\", event.scale);
    return payload;
  });
}


void EventsNativeComponentEventEmitter::onArrayEventType(OnArrayEventType event) const {
  dispatchEvent(\\"arrayEventType\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    
    auto __codegen__1__bool_array_event_prop = jsi::Array(runtime, event.bool_array_event_prop.size());
    size_t __codegen__2__bool_array_event_propIndex = 0;
    for (auto __codegen__3__bool_array_event_propValue : event.bool_array_event_prop) {
      __codegen__1__bool_array_event_prop.setValueAtIndex(runtime, __codegen__2__bool_array_event_propIndex++, (bool)__codegen__3__bool_array_event_propValue);
    }
    payload.setProperty(runtime, \\"bool_array_event_prop\\", __codegen__1__bool_array_event_prop);
  

    auto __codegen__4__string_enum_event_prop = jsi::Array(runtime, event.string_enum_event_prop.size());
    size_t __codegen__5__string_enum_event_propIndex = 0;
    for (auto __codegen__6__string_enum_event_propValue : event.string_enum_event_prop) {
      __codegen__4__string_enum_event_prop.setValueAtIndex(runtime, __codegen__5__string_enum_event_propIndex++, toString(__codegen__6__string_enum_event_propValue));
    }
    payload.setProperty(runtime, \\"string_enum_event_prop\\", __codegen__4__string_enum_event_prop);
  

    auto __codegen__7__array_array_event_prop = jsi::Array(runtime, event.array_array_event_prop.size());
    size_t __codegen__8__array_array_event_propIndex = 0;
    for (auto __codegen__9__array_array_event_propValue : event.array_array_event_prop) {
      auto __codegen__10__array_array_event_propArray = jsi::Array(runtime, __codegen__9__array_array_event_propValue.size());
      size_t __codegen__8__array_array_event_propIndexInternal = 0;
      for (auto __codegen__9__array_array_event_propValueInternal : __codegen__9__array_array_event_propValue) {
        __codegen__10__array_array_event_propArray.setValueAtIndex(runtime, __codegen__8__array_array_event_propIndexInternal++, __codegen__9__array_array_event_propValueInternal);
      }
      __codegen__7__array_array_event_prop.setValueAtIndex(runtime, __codegen__8__array_array_event_propIndex++, __codegen__10__array_array_event_propArray);
    }
    payload.setProperty(runtime, \\"array_array_event_prop\\", __codegen__7__array_array_event_prop);
  

    auto __codegen__11__array_object_event_prop = jsi::Array(runtime, event.array_object_event_prop.size());
    size_t __codegen__12__array_object_event_propIndex = 0;
    for (auto __codegen__13__array_object_event_propValue : event.array_object_event_prop) {
      auto __codegen__14__array_object_event_propObject = jsi::Object(runtime);
      __codegen__14__array_object_event_propObject.setProperty(runtime, \\"lat\\", __codegen__13__array_object_event_propValue.lat);
__codegen__14__array_object_event_propObject.setProperty(runtime, \\"lon\\", __codegen__13__array_object_event_propValue.lon);

    auto __codegen__15__names = jsi::Array(runtime, __codegen__13__array_object_event_propValue.names.size());
    size_t __codegen__16__namesIndex = 0;
    for (auto __codegen__17__namesValue : __codegen__13__array_object_event_propValue.names) {
      __codegen__15__names.setValueAtIndex(runtime, __codegen__16__namesIndex++, __codegen__17__namesValue);
    }
    __codegen__14__array_object_event_propObject.setProperty(runtime, \\"names\\", __codegen__15__names);
  
      __codegen__11__array_object_event_prop.setValueAtIndex(runtime, __codegen__12__array_object_event_propIndex++, __codegen__14__array_object_event_propObject);
    }
    payload.setProperty(runtime, \\"array_object_event_prop\\", __codegen__11__array_object_event_prop);
  

    auto __codegen__18__array_mixed_event_prop = jsi::Array(runtime, event.array_mixed_event_prop.size());
    size_t __codegen__19__array_mixed_event_propIndex = 0;
    for (auto __codegen__20__array_mixed_event_propValue : event.array_mixed_event_prop) {
      __codegen__18__array_mixed_event_prop.setValueAtIndex(runtime, __codegen__19__array_mixed_event_propIndex++, jsi::valueFromDynamic(runtime, __codegen__20__array_mixed_event_propValue));
    }
    payload.setProperty(runtime, \\"array_mixed_event_prop\\", __codegen__18__array_mixed_event_prop);
  
    return payload;
  });
}


void EventsNativeComponentEventEmitter::onEventDirect(OnEventDirect event) const {
  dispatchEvent(\\"eventDirect\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}


void EventsNativeComponentEventEmitter::onOrientationChange(OnOrientationChange event) const {
  dispatchEvent(\\"orientationChange\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"orientation\\", toString(event.orientation));
    return payload;
  });
}

void EventsNativeComponentEventEmitter::onEnd() const {
  dispatchEvent(\\"end\\");
}

void EventsNativeComponentEventEmitter::onEventWithMixedPropAttribute(OnEventWithMixedPropAttribute event) const {
  dispatchEvent(\\"eventWithMixedPropAttribute\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", jsi::valueFromDynamic(runtime, event.value));
    return payload;
  });
}

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/EventEmitters.h>


namespace facebook::react {

void InterfaceOnlyComponentEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"paperChange\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}


void InterfaceOnlyComponentEventEmitter::onDirectChange(OnDirectChange event) const {
  dispatchEvent(\\"paperDirectChange\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EXCLUDE_ANDROID/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EXCLUDE_ANDROID_IOS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/EventEmitters.h>


namespace facebook::react {


} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture FLOAT_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/FLOAT_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture IMAGE_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/IMAGE_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture INSETS_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/INSETS_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/INT32_ENUM_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture INTEGER_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/INTEGER_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/INTERFACE_ONLY/EventEmitters.h>


namespace facebook::react {

void InterfaceOnlyComponentEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"change\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture MIXED_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/MIXED_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/MULTI_NATIVE_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/NO_PROPS_NO_EVENTS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture OBJECT_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/OBJECT_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture POINT_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/POINT_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/STRING_ENUM_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture STRING_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/STRING_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/EventEmitters.h>


namespace facebook::react {


} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/EventEmitters.h>


namespace facebook::react {


} // namespace facebook::react
",
}
`;
